objects/DSR_Attachments__c.object
<CustomObject>
    <fields>
        <fullName>Access__c</fullName>
        <label>Access</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <description>Name of the related Account for the associated DSR.  Used to reduce search time for Smart Finder.</description>
        <formula>DSRSCEngagement__r.AccountName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttachmentType__c</fullName>
        <label>Attachment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttachmentURL__c</fullName>
        <label>Attachment URL</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSRSCEDesign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSR SCE Design</label>
        <referenceTo>DSR_SCE_Design__c</referenceTo>
        <relationshipLabel>DSR Attachments</relationshipLabel>
        <relationshipName>DSR_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSRSCEngagement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSR SC Engagement</label>
        <referenceTo>DSR_SCEngagement__c</referenceTo>
        <relationshipLabel>DSR Attachments</relationshipLabel>
        <relationshipName>DSR_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateofAttachment__c</fullName>
        <label>Date of Attachment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DocumentId__c</fullName>
        <label>DocumentId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDesignPrimary__c</fullName>
        <formula>If(DSRSCEDesign__c == (DSRSCEngagement__r.Primary_Design_ID__c), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsDesignPrimary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ObjectType__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityName__c</fullName>
        <description>Name of the related Opportunity for this DSR Attachment.  Used to help searches in Smart Finder</description>
        <formula>DSRSCEngagement__r.OpportunityName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCEDesignName__c</fullName>
        <formula>DSRSCEDesign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SCE Design Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCEngagementName__c</fullName>
        <formula>DSRSCEngagement__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SC Engagement Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DSR Attachments</label>
    <nameField>
        <label>DSR Attachments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DSR Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>